fixed some layout bugs

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -741,21 +741,33 @@ header {
 nav {
   padding: 1em;
   position: relative;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* padding: 1em; */
 }
 nav h3 {
   margin: 0;
   padding: 0;
+  display: inline-block;
+  margin-right: 1em;
+  font-size: 1.5rem;
+  color: var(--name-heading);
+}
+nav a {
+  color: var(--main);
+  font-weight: 800;
+}
+nav a:hover {
+  text-decoration: underline;
 }
 nav ul {
   margin: 0;
   padding: 0;
 }
-nav {
-  box-sizing: border-box;
-  display: flex;
-  justify-content: space-between;
-  /* align-items: center; */
-  /* padding: 1em; */
+nav li {
+  margin-bottom: 0;
 }
 
 nav .hamburger {
@@ -792,6 +804,9 @@ nav .desktop-links {
   nav .hamburger {
     display: block;
   }
+  nav .name-and-contact-container a {
+    display: none;
+  }
   nav {
     display: block;
   }
@@ -807,6 +822,7 @@ nav .desktop-links {
     z-index: 100;
     display: flex;
     flex-direction: column;
+    align-items: normal;
   }
   nav .logo-and-hamburger {
     display: flex;
@@ -821,7 +837,7 @@ nav .desktop-links {
     border: none;
     background-color: transparent;
     cursor: pointer;
-    justify-self: flex-end;
+    /* justify-self: flex-end; */
   }
   /* styles for open mobile menu */
   nav .mobile-links {
